# Promptotyping

./: .gitignore  404.html  CHANGELOG_SESSION.md  CITATION.cff  CLAUDE.md  CLEANUP-REORGANIZATION-PLAN.md  DATA.md  DESIGN.md  HANDOVER-SPRINT-1.md  INSTRUCTIONS.md  JOURNAL.md  LICENSE  MD-FILES-ANALYSIS.md  METHODOLOGY-v3.md  PLAN.md  Promptotyping-Journal.md  README.md  REQUIREMENTS.md  VERSION-3-OUTLINE.md  index-bilingual.html  index-v4.html  index.html  paper-content.md  paper-draft.md  use-case-TEMPLATE.json  use-case-template.html
vault/: CLAUDE.md  HOME.md  LICENSE  README.md  SETUP.md  pyproject.toml
vault/20_claims/: MOC-ArtefactVerification.md  MOC-Concepts.md  MOC-Evidence.md  MOC-Frame.md  MOC-Genealogy.md  MOC-Limitations.md  MOC-Method.md  a-prototype-can-embody-a-peer-reviewable-argument.md  applied-genai-dh-workshop-series-2024.md  austrian-dashboard-universities-verified-2026-07-19.md  bookkeeping-ontology-session-driven.md  boundary-objects-are-plastic-yet-robust-across-communities.md  client-side-provenance-tool-is-a-precedent-for-server-free-artefacts.md  collections-as-data-are-intentional.md  conceptual-model-links-language-and-domain-concepts.md  context-engineering-systematic-inference-context.md  context-rot-nonuniform-degradation-with-length.md  coocr-htr-figures-verified-2026-07-19.md  coordinated-multiple-views-enable-exploration.md  correspexplorer-figures-verified-2026-07-19.md  correspexplorer-knowledge-userstory-count-2026-07-19.md  critical-expert-in-the-loop-double-reflection-loop.md  deck-characterises-llms-as-jagged-alien.md  (+111 more)
(+396 files in other folders)
