[project]
name = "grounded-vault"
version = "0"
requires-python = ">=3.11"
dependencies = ["pyyaml"]
# no [build-system]: this repo is a dependency set for the validation scripts,
# not an installable package

[dependency-groups]
dev = ["pytest"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "PTH", "RUF"]
ignore = ["E501"]
